# model_validator

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: dummy_image.py  main.py  models.py  validator.py
